# station

./: README.md  shell.nix  stack.yaml  station.cabal
deck/: local_versions
deck/hashes/: 0bB97CVYSOPjwoyPx-3_M0wtGAj7DUL0PDdRLgWxA2W_eGADwEQe4bIwSa5wO3BM4alZ3SloUxKEMgZROlBrIA  6sZrwr61VVVdqvioSeQQpLzWIveeyDk3grCiv10ge6I4wU3Mxp7_aVHvDdcpfEBCusgu5GiQEnuI4L65w5Cx9w  9W1glLd04HDurDkySkwBCcJ234Cht2ZiqEoDiDBQpH_gxAxLuXQvFO7lnBb4ZS6JtGt6Del4_m05f6ixHpXE5A  LjQypp1s64YQMIPXQStVFE2DeC1vM7tmf6m9cF8I1aHD-jruN3cFHc0bGy5m9C_IBKTNZAAG8na6SgYFbJ0g8A  cP4W8s3avnQXnq7VVCwN7KKgiVu7DQdjdyOS3bvxrNlYWfWiTQDzAqenHdqrMvlq1h5YAV0-yDLIYmb1t56Q9g  jT4SA4snlwdP_cYjoHNUmisyJabN-b5JF3jZPAubiRH-0DdnTTZufAq9xD8GbeZUfKlrEtPdMKU7e8OMq8WfCQ
docs/: advantages.md  card_stores.md  development.md  inspirations.md  schema.md  weaknesses.md
schemas/: Main.hs  README.md
schemas/canonical/: card.json  version.json
schemas/human-optimized/: author.json  card.json  draft4-modified.json  version.json
src/: Base64URL.hs  Import.hs  Station.hs
src/Station/: Implementation.hs  JSON.hs  Lookup.hs  Original.hs  Schema.hs  Types.hs
src/Station/Implementation/: PlainFilesystem.hs
src/Station/Procedures/: Add.hs  Build.hs  General.hs
src/Station/Schema/: Failure.hs
src/Station/Schema/Validator/: HashOf.hs  LinkTo.hs  Ref.hs
src/Station/Types/: Card.hs  Deck.hs  Implementation.hs  Version.hs  VersionContext.hs
src/Station/Types/Card/: Hardcoded.hs  Hash.hs  Id.hs  Link.hs  Time.hs  URI.hs
test/: Import.hs  Test.hs
test/Test/: Hash.hs  Integration.hs  Link.hs  Time.hs  URI.hs
test/Test/Integration/: Schema.hs
