name:               station
version:            0.1.0.0
synopsis:           A JSON Schema datastore for small applications
homepage:           https://github.com/seagreen/station
license:            MIT
license-file:       MIT-LICENSE.txt
author:             Ian Grant Jeffries
maintainer:         ian@housejeffries.com
build-type:         Simple
cabal-version:      >=1.10
extra-source-files:
  schemas/canonical/*.json
  schemas/human-optimized/*.json

library
  hs-source-dirs:
    src
  default-language: Haskell2010
  default-extensions:
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    OverloadedStrings
    ScopedTypeVariables
    StrictData
    TupleSections
  ghc-options:
    -Wall
  exposed-modules:
    Base64URL
    Station
    Station.Implementation
    Station.Implementation.PlainFilesystem
    Station.JSON
    Station.Lookup
    Station.Original
    Station.Procedures.Add
    Station.Procedures.Build
    Station.Procedures.General
    Station.Schema
    Station.Schema.Failure
    Station.Schema.Validator.HashOf
    Station.Schema.Validator.LinkTo
    Station.Schema.Validator.Ref
    Station.Types
    Station.Types.Card
    Station.Types.Card.Hardcoded
    Station.Types.Card.Hash
    Station.Types.Card.Id
    Station.Types.Card.Link
    Station.Types.Card.Time
    Station.Types.Card.URI
    Station.Types.Deck
    Station.Types.Implementation
    Station.Types.Version
    Station.Types.VersionContext
  other-modules:
    Import
  build-depends:
      base
    , aeson
    , aeson-pretty
    , base64-bytestring
    , blake2
    , bytestring
    , containers
    , directory
    , exceptions
    , file-embed
    , filepath
    , hashable
    , hjsonpointer
    , hjsonschema
    , http-types
    , leapseconds-announced >= 2017
    , lens-aeson
    , microlens
    , microlens-th
    , pipes
    , profunctors
    , protolude
    , QuickCheck
    , scientific
    , text
    , time
    , transformers-base
    , turtle
    , unordered-containers
    , uri-bytestring
    , uuid
    , vector

executable canonicalize-schemas
  hs-source-dirs:
    schemas
  default-language: Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    ScopedTypeVariables
    StrictData
    TupleSections
  ghc-options:
    -Wall
  main-is: Main.hs
  build-depends:
      base
    , bytestring
    , directory
    , filepath
    , protolude
    , station
    , text
    , transformers

test-suite test
  hs-source-dirs:
    test
  main-is: Test.hs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    ScopedTypeVariables
    StrictData
    TupleSections
  ghc-options:
    -Wall
    -fno-warn-orphans
  other-modules:
    Import
    Test.Hash
    Test.Link
    Test.Time
    Test.URI
    Test.Integration
    Test.Integration.Schema
  build-depends:
      aeson
    , aeson-pretty
    , base
    , base16-bytestring
    , base64-bytestring
    , blake2
    , bytestring
    , containers
    , directory
    , file-embed
    , filepath
    , hashable
    , hjsonschema
    , microlens
    , mtl
    , pipes
    , profunctors
    , protolude
    , QuickCheck
    , scientific
    , station
    , text
    , time
    , transformers
    , turtle
    , unordered-containers
    , uri-bytestring
    , vector
    , hspec
